# mkdocs-experiement

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  workflow-reference.md
mkdocs_experiment/: workflow.py
search/: search_index.json
tests/: test_mkdocs_experiement.py
workflow-reference/: index.html
