[tool.poetry]
name = "mkdocs_experiement"
version = "0.1.0"
description = ""
authors = ["Knut H Pederseen <knuthp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.2.5"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^23.1a1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
