[tool.poetry]
name = "mkdocs_experiement"
version = "0.1.0"
description = ""
authors = ["Knut H Pederseen <knuthp@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.2.5"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
isort = "^5.11.4"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
